--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="WIP" value="/Volumes/ws/tv/dotnet-binding-utils/nugets" />
     <add key="Tuyen - MyGet" value="https://www.myget.org/F/tuyen-vuduc/api/v3/index.json" />
   </packageSources>
 </configuration>
