--- a/src/QuickStart.Dotnet.StripeDroid/QuickStart.Dotnet.StripeDroid.csproj
+++ b/src/QuickStart.Dotnet.StripeDroid/QuickStart.Dotnet.StripeDroid.csproj
@@ -18,4 +18,12 @@
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
     <PackageReference Include="Xamarin.KotlinX.Serialization.Core" Version="1.6.3.3" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\QuickStart.Dotnet.StripeHost\Shared.cs">
+      <Link>Shared.cs</Link>
+    </Compile>
+    <Compile Include="..\QuickStart.Dotnet.StripeHost\Shared.dev.cs">
+      <Link>Shared.dev.cs</Link>
+    </Compile>
+  </ItemGroup>
 </Project>
