--- a/src/QuickStart.Dotnet.StripeHost/QuickStart.Dotnet.StripeHost.csproj
+++ b/src/QuickStart.Dotnet.StripeHost/QuickStart.Dotnet.StripeHost.csproj
@@ -8,6 +8,12 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <LangVersion>latestmajor</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <LangVersion>latestmajor</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Stripe.net" Version="44.13.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
