--- a/src/QuickStart.Dotnet.StripeIos/QuickStart.Dotnet.StripeIos.csproj
+++ b/src/QuickStart.Dotnet.StripeIos/QuickStart.Dotnet.StripeIos.csproj
@@ -12,4 +12,15 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <CreatePackage>false</CreatePackage>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="StripePaymentSheet.iOS" Version="23.27.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\QuickStart.Dotnet.StripeHost\Shared.cs">
+      <Link>Shared.cs</Link>
+    </Compile>
+    <Compile Include="..\QuickStart.Dotnet.StripeHost\Shared.dev.cs">
+      <Link>Shared.dev.cs</Link>
+    </Compile>
+  </ItemGroup>
 </Project>
