- sample iOS: OK

--- a/src/QuickStart.Dotnet.StripeIos/QuickStart.Dotnet.StripeIos.csproj
+++ b/src/QuickStart.Dotnet.StripeIos/QuickStart.Dotnet.StripeIos.csproj
@@ -32,4 +32,7 @@
       <Link>Shared.dev.cs</Link>
     </Compile>
   </ItemGroup>
+  <Target Name="DisplayMessages" AfterTargets="_CompileNativeExecutable" BeforeTargets="_LinkNativeExecutable">
+    <Message Text="_StripeSDKBaseFolder: $(_StripeSDKBaseFolder)" Importance="High" />
+  </Target>
 </Project>
